# Rectified-Point-Flow

./: README.md  pyproject.toml  sample.py
config/: RPF_base_predict_overlap.yaml  RPF_base_pretrain.yaml  RPF_base_test_crag.yaml
config/data/: crag.yaml  ikea.yaml  ikea_partnet_everyday_twobytwo_modelnet_tudl.yaml  ikea_partnet_everyday_twobytwo_modelnet_tudl_objverse.yaml  ikea_twobytwo.yaml
config/model/: rectified_point_flow.yaml
config/trainer/: main.yaml
dataset_process/: README.md
rectified_point_flow/: modeling.py  procrustes.py  sampler.py  visualizer.py
rectified_point_flow/data/: datamodule.py  dataset.py
rectified_point_flow/encoder/: point_cloud_encoder.py
rectified_point_flow/eval/: evaluator.py  metrics.py
rectified_point_flow/flow_model/: embedding.py  layer.py  norm.py  point_cloud_dit.py
rectified_point_flow/utils/: __init__.py  checkpoint.py  point_clouds.py
