[project]
name = "rpf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "addict>=2.4.0",
    "diffusers>=0.32.2",
    "flash-attn==2.7.4.post1",
    "gradio>=5.26.0",
    "h5py>=3.13.0",
    "hydra-core>=1.3.2",
    "jaxtyping>=0.3.1",
    "lightning>=2.5.1",
    "matplotlib>=3.10.3",
    "mitsuba>=3.7.0",
    "opencv-python>=4.11.0.86",
    "peft>=0.15.1",
    "pymeshlab>=2023.12.post3",
    "rerun-sdk>=0.22.1",
    "rich>=14.0.0",
    "scikit-image>=0.25.2",
    "scipy>=1.15.2",
    "spconv-cu121==2.3.8",
    "swanlab>=0.6.4",
    "timm>=1.0.15",
    "torch==2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.50.2",
    "trimesh>=4.6.6",
    "typeguard>=4.4.2",
    "wandb>=0.19.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "rerun-sdk>=0.22.1",
    "ruff>=0.11.2",
]


[project.optional-dependencies]
post = ["flash-attn", "pytorch3d", "torch-scatter", "torch_cluster", "diso"]

[tool.uv]
environments = ["sys_platform == 'linux'"]
no-build-isolation-package = [
    "flash-attn",
    "pytorch3d",
    "torch-scatter",
    "torch-cluster",
    "diso",
]
find-links = ["https://data.pyg.org/whl/torch-2.6.0+cu124.html"]

[tool.uv.sources]
garf = { workspace = true }
pytorch3d = { git = "https://github.com/facebookresearch/pytorch3d", tag = "V0.7.8" }

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.4.post1"
requires-dist = ["torch", "einops"]

[[tool.uv.dependency-metadata]]
name = "pytorch3d"
version = "0.7.8"
requires-dist = ["torch", "setuptools"]

[[tool.uv.dependency-metadata]]
name = "torch-scatter"
url = "2.1.2+pt26cu124"
requires-dist = ["torch", "setuptools"]

[[tool.uv.dependency-metadata]]
name = "torch-cluster"
url = "1.6.3+pt26cu124"
requires-dist = ["torch", "setuptools"]

[[tool.uv.dependency-metadata]]
name = "diso"
version = "0.1.4"·
requires-dist = ["torch", "setuptools"]

[tool.pytest.ini_options]
markers = ["manual: should be run manually."]
testpaths = ["garf"]
